--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.32.0",
     "@react-three/fiber": "^8.8.2",
     "next": "12.3.1",
     "react": "18.2.0",
